feat: add role-based access control and logging configuration

--- a/services/support/gateway-server/pom.xml
+++ b/services/support/gateway-server/pom.xml
@@ -94,7 +94,14 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>com.lcaohoanq</groupId>
+            <artifactId>common-library</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+
+    </dependencies>
 
 	<build>
 		<plugins>
