--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
       <optional>true</optional>
     </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.18.0</version>
+      </dependency>
+
   </dependencies>
 
   <dependencyManagement>
