--- a/services/support/discovery-server/pom.xml
+++ b/services/support/discovery-server/pom.xml
@@ -25,6 +25,14 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
+
+      <dependency>
+          <groupId>com.lcaohoanq</groupId>
+          <artifactId>common-library</artifactId>
+          <version>1.0.0</version>
+      </dependency>
+
+
   </dependencies>
 
   <dependencyManagement>
