feat: update spring doc version, config scalar, hateoas

--- a/services/core/product-service/src/main/resources/application-test.yml
+++ b/services/core/product-service/src/main/resources/application-test.yml
@@ -18,3 +18,20 @@ spring:
   jackson:
     date-format: dd/MM/yyyy HH:mm:ss
     time-zone: Asia/Ho_Chi_Minh
+
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
+
+# Scalar Config
+# Ref: https://guides.scalar.com/scalar/scalar-api-references/integrations/spring-boot
+scalar:
+  enabled: true
+
+  #  https://registry.scalar.com/@scalar/apis/galaxy/latest?format=json
+  url: https://cdn.jsdelivr.net/npm/@scalar/galaxy/dist/latest.json
+  path: /scalar
+  theme: moon
+
+
