--- a/services/core/product-service/pom.xml
+++ b/services/core/product-service/pom.xml
@@ -16,6 +16,12 @@
 
   <properties>
     <java.version>17</java.version>
+
+    <!-- https://mvnrepository.com/artifact/com.github.gavlyukovskiy/p6spy-spring-boot-starter -->
+    <p6spy-springboot.version>1.12.0</p6spy-springboot.version>
+
+    <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+    <springdoc.openapi.version>2.8.13</springdoc.openapi.version>
   </properties>
   <dependencies>
     <dependency>
@@ -26,11 +32,46 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
+
+<!--   HATEOAS -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-hateoas</artifactId>
+    </dependency>
+
+    <!--  Swagger  -->
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      <version>2.7.0</version>
+      <version>${springdoc.openapi.version}</version>
     </dependency>
+
+    <!-- This swagger does not include the swagger ui, more lightweight when using   -->
+    <!--    <dependency>-->
+    <!--      <groupId>org.springdoc</groupId>-->
+    <!--      <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>-->
+    <!--      <version>${springdoc.openapi.version}</version>-->
+    <!--    </dependency>-->
+
+    <!--   Ref: https://springdoc.org/ -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-scalar</artifactId>
+      <version>${springdoc.openapi.version}</version>
+    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>com.scalar.maven</groupId>-->
+<!--      <artifactId>scalar</artifactId>-->
+<!--      <version>0.1.0</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>com.github.gavlyukovskiy</groupId>
+      <artifactId>p6spy-spring-boot-starter</artifactId>
+      <version>${p6spy-springboot.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>com.lcaohoanq</groupId>
       <artifactId>common-library</artifactId>
@@ -62,6 +103,7 @@
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+
   </dependencies>
 
   <build>
