--- a/services/support/gateway-server/pom.xml
+++ b/services/support/gateway-server/pom.xml
@@ -15,6 +15,9 @@
 
 	<properties>
 		<java.version>17</java.version>
+
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<springdoc.openapi.version>2.8.13</springdoc.openapi.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,8 +48,16 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
-			<version>2.7.0</version>
+			<version>${springdoc.openapi.version}</version>
 		</dependency>
+
+		<!-- This swagger does not include the swagger ui, more lightweight when using   -->
+		<!--    <dependency>-->
+		<!--      <groupId>org.springdoc</groupId>-->
+		<!--      <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>-->
+		<!--      <version>${springdoc.openapi.version}</version>-->
+		<!--    </dependency>-->
+
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
@@ -94,11 +105,11 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
-        <dependency>
-            <groupId>com.lcaohoanq</groupId>
-            <artifactId>common-library</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+		<dependency>
+				<groupId>com.lcaohoanq</groupId>
+				<artifactId>common-library</artifactId>
+				<version>1.0.0</version>
+		</dependency>
 
 
     </dependencies>
