--- a/services/core/product-service/pom.xml
+++ b/services/core/product-service/pom.xml
@@ -39,6 +39,11 @@
       <artifactId>spring-boot-starter-hateoas</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-rest-hal-explorer</artifactId>
+    </dependency>
+
     <!--  Swagger  -->
     <dependency>
       <groupId>org.springdoc</groupId>
