feat: add mail config

--- a/services/core/user-service/src/main/resources/application-test.yml
+++ b/services/core/user-service/src/main/resources/application-test.yml
@@ -6,7 +6,7 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
@@ -18,3 +18,8 @@ spring:
   jackson:
     date-format: dd/MM/yyyy HH:mm:ss
     time-zone: Asia/Ho_Chi_Minh
+
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
