--- a/services/core/user-service/pom.xml
+++ b/services/core/user-service/pom.xml
@@ -16,6 +16,9 @@
 
   <properties>
     <java.version>17</java.version>
+
+    <!-- https://mvnrepository.com/artifact/com.github.gavlyukovskiy/p6spy-spring-boot-starter -->
+    <p6spy-springboot.version>1.12.0</p6spy-springboot.version>
   </properties>
   <dependencies>
     <dependency>
@@ -61,6 +64,12 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.gavlyukovskiy</groupId>
+      <artifactId>p6spy-spring-boot-starter</artifactId>
+      <version>${p6spy-springboot.version}</version>
     </dependency>
 
   </dependencies>
