--- a/services/support/auth-server/src/main/resources/application.yml
+++ b/services/support/auth-server/src/main/resources/application.yml
@@ -25,6 +25,13 @@ spring:
       enabled: true
       path: /h2-console
 
+  mail:
+    host: ${MAIL_HOST:smtp.gmail.com}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME:you_username_here@example.com}
+    password: ${MAIL_PASSWORD:your_password_here}
+    base-url: http://127.0.0.1:${server.port:4005}
+
 eureka:
   client:
     service-url:
@@ -37,6 +44,10 @@ eureka:
 
 server:
   port: 4005
+
+# Service URLs (fallback if Eureka is not available)
+user-service:
+  url: http://localhost:4007
 
 # JWT Configuration
 jwt:
