--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <module>services/support/auth-server</module>
     <module>services/support/gateway-server</module>
     <module>services/support/discovery-server</module>
+    <module>services/support/config-server</module>
   </modules>
 
   <dependencies>
