--- a/services/core/product-service/pom.xml
+++ b/services/core/product-service/pom.xml
@@ -109,6 +109,24 @@
       <optional>true</optional>
     </dependency>
 
+<!--   Config server -->
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bootstrap</artifactId>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+      <version>4.2.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
