--- a/services/support/config-server/src/main/resources/configurations/product-service.yml
+++ b/services/support/config-server/src/main/resources/configurations/product-service.yml
@@ -3,7 +3,7 @@ spring:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL
     driver-class-name: org.h2.Driver
     username: sa
-    password: password
+    password: password1231231
   jpa:
     hibernate:
       ddl-auto: update
@@ -27,15 +27,6 @@ springdoc:
   api-docs:
     path: /v3/api-docs
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    register-with-eureka: true
-    fetch-registry: true
-  instance:
-    prefer-ip-address: true
-
 decorator:
   datasource:
     p6spy:
@@ -48,7 +39,8 @@ scalar:
 
   #  https://registry.scalar.com/@scalar/apis/galaxy/latest?format=json
   url: https://cdn.jsdelivr.net/npm/@scalar/galaxy/dist/latest.json
-  path: /scalar
+  path: /scalar-v2
   theme: moon
 
-
+app:
+  welcome: "Updated Hello !"
