--- a/services/core/user-service/pom.xml
+++ b/services/core/user-service/pom.xml
@@ -19,6 +19,9 @@
 
     <!-- https://mvnrepository.com/artifact/com.github.gavlyukovskiy/p6spy-spring-boot-starter -->
     <p6spy-springboot.version>1.12.0</p6spy-springboot.version>
+
+    <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+    <springdoc.openapi.version>2.8.13</springdoc.openapi.version>
   </properties>
   <dependencies>
     <dependency>
@@ -29,11 +32,28 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
+
+    <!--  Swagger  -->
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      <version>2.7.0</version>
+      <version>${springdoc.openapi.version}</version>
     </dependency>
+
+    <!-- This swagger does not include the swagger ui, more lightweight when using   -->
+    <!--    <dependency>-->
+    <!--      <groupId>org.springdoc</groupId>-->
+    <!--      <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>-->
+    <!--      <version>${springdoc.openapi.version}</version>-->
+    <!--    </dependency>-->
+
+    <!--   Ref: https://springdoc.org/ -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-scalar</artifactId>
+      <version>${springdoc.openapi.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>com.lcaohoanq</groupId>
       <artifactId>common-library</artifactId>
