--- a/services/support/auth-server/pom.xml
+++ b/services/support/auth-server/pom.xml
@@ -17,6 +17,9 @@
 
   <properties>
     <java.version>17</java.version>
+
+    <!-- https://mvnrepository.com/artifact/com.github.gavlyukovskiy/p6spy-spring-boot-starter -->
+    <p6spy-springboot.version>1.12.0</p6spy-springboot.version>
   </properties>
 
   <dependencies>
@@ -38,6 +41,17 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.gavlyukovskiy</groupId>
+      <artifactId>p6spy-spring-boot-starter</artifactId>
+      <version>${p6spy-springboot.version}</version>
     </dependency>
 
     <dependency>
